fix: noFound page text align

--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -18,6 +18,7 @@
   margin: 0;
   font-size: 16px;
   line-height: 19px;
+  text-align: center;
 }
 
 .not-found__button {
